--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
    <h1>My first GIT project</h1>
    <p>This is a test site created to understand branching concept of the GIT Distributed Version Control System.</p>
+   <a href="1.html">new page</a>
   </body>
 
 </html>
