index page updated with new anchor page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <h1>My first GIT project</h1>
    <p>This is a test site created to understand branching concept of the GIT Distributed Version Control System.</p>
    <a href="1.html">new page</a>
+   <a href="2.html">new page 2</a>
   </body>
 
 </html>
