--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <p>This is a test site created to understand branching concept of the GIT Distributed Version Control System.</p>
    <a href="1.html">new page</a>
    <a href="2.html">new page 2</a>
+   <a href="4.html">new page 4</a>
   </body>
 
 </html>
